# Practica3SistOpAv

./: CMakeLists.txt  README.md  cliente.c  servidorHebTCP.c  servidorOpAlgebraicas.c  servidorProcTCP.c
